<resources>
    <string name="app_name">Pothole Detector</string>

    <string name="SpeedometerLabel">Speed:</string>
    <string name="Speed">Waiting for GPS</string>
    <string name="Title">Accelerometer</string>
    <string name="xAccel">Vertical Acceleration: -</string>
    <string name="yAccel">Number of Readings Stored: -</string>
    <string name="zAccel">Acceleration Readings</string>
    <string name="action_settings">Settings</string>
    <string name="SaveButton">Save</string>
    <string name="ClearButton">Clear File</string>
    <string name="EmailButton">Email</string>
    <string name="TriggerButton">Change Trigger</string>
    <string name="ResetTriggerButton">Reset</string>
    <string name="EndButton">Stop</string>
    <string name="TriggerInput">Adjust Trigger Acceleration</string>
</resources>
